--- a/views/articles/info.ejs
+++ b/views/articles/info.ejs
@@ -1,3 +1,7 @@
 <%- include('../common/header.ejs')%>
-<h1>文章页</h1>
+<div class="container">
+    <h1>文章页</h1>
+    <hr>
+    <p>content</p>
+</div>
 <%- include('../common/footer.ejs')%>
