--- a/views/articles/info.ejs
+++ b/views/articles/info.ejs
@@ -1,7 +1,12 @@
 <%- include('../common/header.ejs')%>
 <div class="container">
-    <h1>文章页</h1>
-    <hr>
-    <p>content</p>
+  <h1 class="text-center">
+    <%= article.title%> 
+    <%if(article.author_id==user.id){%>
+        <a class="btn btn-success pull-right" href="/articles/edit/<%= article.id%>">编辑</a>
+    <%}%>
+    <hr />
+  </h1>
+  <div><%- article.content%></div>
 </div>
 <%- include('../common/footer.ejs')%>
