--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">小倔强</a>
+                <a class="navbar-brand" href="/">学与友</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
