--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,59 @@
 <%- include('./common/header.ejs')%>
-<h1>文章列表</h1>
+
+<div class="container">
+    <h1>文章列表</h1>
+    <div class="list-group">
+        <% for(var i=0;i<result.length;i++){ %>
+        <li class="list-group-item">
+            <a href="./articles/info/<%=result[i].id%>">
+                <%= result[i].title%>
+                <span class="badge pull-right" style="background-color:#5cb85c;margin-left:5px ">
+                    <%= result[i].ctime%></span>
+                <span class="badge pull-right" style="background-color:#f0ad4e">
+                    <%= result[i].nickname%></span>
+            </a>
+        </li>
+        <% } %>
+    </div>
+    <nav aria-label="Page navigation list-group">
+        <ul class="pagination">
+            <%if(page==1){%>
+            <li class="disabled">
+                <span aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </span>
+            </li>
+            <%}else{%>
+            <li>
+                <a href="?page=<%= (page-1)<1?1:(page-1) %>" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <%}%>
+
+            <% for(var i=1;i<=total;i++){ %>
+            <li class="<%= page==i?'active':''%>">
+                <a href="/?page=<%=i%>">
+                    <%= i%>
+                </a>
+            </li>
+            <%}%>
+
+            <%if(page==total){%>
+                <li class="disabled">
+                    <span aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </span>
+                </li>
+                <%}else{%>
+                <li>
+                    <a href="?page=<%= (page+1)>total?total:(page+1)%>" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+                <%}%>
+        </ul>
+    </nav>
+</div>
+
 <%- include('./common/footer.ejs')%>
